update on the rafting css and about html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,9 @@
   // Live and Live/Five Server settings
   "fiveServer.port": 5501,
   "fiveServer.injectBody": false,
-  "liveServer.settings.port": 5504
+  "liveServer.settings.port": 5504,
+  "cSpell.words": [
+    "Ayodele",
+    "socialmedia"
+  ]
 }
